const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');
require('dotenv').config();

const database = require('./config/database');
const { testConnection } = require('./config/cloudinary');
const productService = require('./services/productService');

/**
 * ConfiguraciÃ³n de carga del archivo proto
 */
const PROTO_PATH = path.join(__dirname, 'proto', 'product.proto');

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const productProto = grpc.loadPackageDefinition(packageDefinition).product;

/**
 * Inicia el servidor gRPC
 */
async function startServer() {
  try {
    console.log('ğŸš€ Iniciando servidor gRPC de Products Service...');

    // Conectar a MongoDB
    await database.connect();

    // Verificar conexiÃ³n con Cloudinary
    const cloudinaryConnected = await testConnection();
    if (!cloudinaryConnected) {
      console.warn('âš ï¸ No se pudo conectar con Cloudinary. Las operaciones con imÃ¡genes fallarÃ¡n.');
    }

    // Inicializar el servicio de productos
    productService.initialize();

    // Crear servidor gRPC
    const server = new grpc.Server();

    // Agregar el servicio
    server.addService(productProto.ProductService.service, {
      createProduct: productService.createProduct.bind(productService),
      getProducts: productService.getProducts.bind(productService),
      getProductById: productService.getProductById.bind(productService),
      updateProduct: productService.updateProduct.bind(productService),
      deleteProduct: productService.deleteProduct.bind(productService)
    });

    // Configurar puerto
    const PORT = process.env.GRPC_PORT || 50052;
    const HOST = '0.0.0.0';

    // Iniciar servidor
    server.bindAsync(
      `${HOST}:${PORT}`,
      grpc.ServerCredentials.createInsecure(),
      (error, port) => {
        if (error) {
          console.error('âŒ Error al iniciar servidor gRPC:', error);
          process.exit(1);
        }

        console.log('âœ… Servidor gRPC iniciado correctamente');
        console.log(`ğŸ“¡ Escuchando en ${HOST}:${port}`);
        console.log(`ğŸŒ Entorno: ${process.env.NODE_ENV || 'development'}`);
        console.log('ğŸ“¦ Servicios disponibles:');
        console.log('   - CreateProduct');
        console.log('   - GetProducts');
        console.log('   - GetProductById');
        console.log('   - UpdateProduct');
        console.log('   - DeleteProduct');
      }
    );

    // Manejo de seÃ±ales para cierre graceful
    process.on('SIGINT', async () => {
      console.log('\nâš ï¸ Recibida seÃ±al SIGINT. Cerrando servidor...');
      server.tryShutdown(async () => {
        await database.disconnect();
        console.log('ğŸ‘‹ Servidor cerrado correctamente');
        process.exit(0);
      });
    });

    process.on('SIGTERM', async () => {
      console.log('\nâš ï¸ Recibida seÃ±al SIGTERM. Cerrando servidor...');
      server.tryShutdown(async () => {
        await database.disconnect();
        console.log('ğŸ‘‹ Servidor cerrado correctamente');
        process.exit(0);
      });
    });

  } catch (error) {
    console.error('âŒ Error fatal al iniciar el servidor:', error);
    process.exit(1);
  }
}

// Iniciar el servidor
startServer();